# HakuBot

./: .env.prod  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  todo_list.txt
plugins/add_friend/: __init__.py  command_handler.py  config.py  data_manager.py  request_handler.py  utils.py
plugins/ai_assistant/: __init__.py  config.py  matcher.py  service.py  test.py  test_image.py  utils.py
plugins/alive_stat/: __init__.py  collector.py  config.py  drawer.py  runtime.py
plugins/analysis_bilibili/: __init__.py  analysis_bilibili.py
plugins/atri_reply/: __init__.py  config.json
plugins/buaa_msm/: __init__.py  analysis.py  bind.json  bind.py  config.example.json  config.py  data_manage.py  data_rename.py  data_upload.py  decrypt.py  decrypt_paint.py  exceptions.py  help.py  msr.py
plugins/cnpjskprofile_snowybot/: __init__.py  config_manager.py  data_manager.py  profile.py  query.py  scbind.py
plugins/cnsk_predict/: __init__.py  browser.py  config.py  image.py
plugins/daily_message/: __init__.py  command_handler.py  config_manager.py
plugins/deer_pipe/: README.md  __init__.py  config.py  constants.py  database.py  image.py  matchers.py  requirements.py
plugins/draw_lots/: __init__.py  message.py  render.py
plugins/group_daily_analysis/: __init__.py  requirements.txt
plugins/group_statistics/: __init__.py  config.py  data_manager.py  handlers.py  render.py  scheduler.py  utils.py
plugins/groupmate_waifu/: __init__.py  config.py  constants.py  data_manager.py  marry.py  render.py  rules.py  service.py  storage.py  utils.py  yinpa.py
plugins/help_plugin/: __init__.py  config.py  drawer.py  manager.py
plugins/hltv_sub/: __init__.py  config.py  data_manager.py  data_source.py  debug_stats.py  http_client.py  models.py  permissions.py  render.py  scheduler.py
plugins/hyw/: __init__.py
plugins/identify/: __init__.py  config.py  data_manager.py
plugins/image_processor/: __init__.py  gif_reverse.py  gif_speed.py  help.py  image_cutout.py  image_mirror.py  image_rotate.py  image_symmetry.py  rembg_prefetch.py  utils.py  video_to_gif.py
plugins/jrrp/: __init__.py
plugins/lunabot_imgexp/: __init__.py  config.py  core.py  twitter.py
plugins/pixiv_id_fetcher/: __init__.py  client.py  config.py  formatter.py  matcher.py  models.py
plugins/pjsk_event_summary/: __init__.py  api.py  models.py  render.py  scheduler.py
plugins/pjsk_guess_card/: __init__.py  card_data.py  config.py  (+2 more)
plugins_todo_&_backup/: __init__.py
(+348 files in other folders)
