[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-bison>=0.5.5",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_localstore", "nonebot_plugin_htmlrender", "nonebot_plugin_saalc", "nonebot_bison", "nonebot_plugin_zxpix"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
