[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot-bison>=0.5.5",
    "httpx>=0.23.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "pillow>=9.0.0",
    "numpy>=1.23.0",
    "opencv-python-headless>=4.8.0.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.16.0"
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_localstore", "nonebot_plugin_htmlrender", "nonebot_plugin_saalc", "nonebot_bison"]
plugin_dirs = ["plugins"]
builtin_plugins = ["echo"]
